--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACTION_MANAGE_OVERLAY_PERMISSION" />
+
+    <uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
@@ -13,11 +17,13 @@
         android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
 
-    <uses-permission android:name="android.permission.GET_TASKS" />
+
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+
+
 
     <application
         android:name=".MyApplication"
@@ -51,14 +57,25 @@
 
 
         <receiver
-            android:name=".Broadcast"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:name=".AppCheckService"
             android:exported="true">
+
             <intent-filter>
-                <action android:name="test.Broadcast" />
+                <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityervice"
+                android:resource="@xml/accessibility_service_config" />
+
         </receiver>
 
-        <activity android:name=".TestBroadcastActivity"></activity>
+        <activity
+            android:name=".OverlayActivity"
+            android:exported="true">
+
+        </activity>
 
 
     </application>
