--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,11 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission
-        android:name="android.permission.PACKAGE_USAGE_STATS"
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission
-        android:name="android.permission.QUERY_ALL_PACKAGES"
-        tools:ignore="QueryAllPackagesPermission" />
+
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
+
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"  tools:ignore="QueryAllPackagesPermission" />
+
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -33,7 +32,7 @@
         tools:targetApi="31">
 
         <service
-            android:name=".AppCheckService"
+            android:name=".service.LockService"
             android:enabled="true"
             android:exported="true"
             android:foregroundServiceType="dataSync" />
@@ -52,7 +51,7 @@
 
         <receiver
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:name=".AppCheckService"
+            android:name=".service.LockService"
             android:exported="true">
 
             <intent-filter>
