--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,25 +47,6 @@
             </intent-filter>
         </activity>
 
-
-
-        <receiver
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:name=".service.LockService"
-            android:exported="true">
-
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config2" />
-
-
-        </receiver>
-
-
         <activity
             android:name=".OverlayActivity"
             android:launchMode="singleInstance"
@@ -80,7 +61,13 @@
         </activity>
 
 
-
+        <receiver android:name=".service.LockService$Broadcast"
+            android:exported="true"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="ACTION_LOCK_APP"/>
+            </intent-filter>
+        </receiver>
 
 
     </application>
